syntax = "proto3";

package fixtures;

option go_package = "github.com/example/fixtures";

import "google/protobuf/empty.proto";

// Simple service for testing
service SimpleService {
  // Get a single item
  rpc GetItem(GetItemRequest) returns (GetItemResponse) {}
  
  // List all items
  rpc ListItems(ListItemsRequest) returns (ListItemsResponse) {}
  
  // Create a new item
  rpc CreateItem(CreateItemRequest) returns (CreateItemResponse) {}
  
  // Update an existing item
  rpc UpdateItem(UpdateItemRequest) returns (UpdateItemResponse) {}
  
  // Delete an item (dangerous operation)
  rpc DeleteItem(DeleteItemRequest) returns (google.protobuf.Empty) {}
}

message Item {
  string id = 1;
  string name = 2;
  string description = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
}

message GetItemRequest {
  string id = 1;
}

message GetItemResponse {
  Item item = 1;
}

message ListItemsRequest {
  int32 page_size = 1;
  string page_token = 2;
  string filter = 3;
}

message ListItemsResponse {
  repeated Item items = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

message CreateItemRequest {
  Item item = 1;
}

message CreateItemResponse {
  Item item = 1;
}

message UpdateItemRequest {
  Item item = 1;
  string update_mask = 2;
}

message UpdateItemResponse {
  Item item = 1;
}

message DeleteItemRequest {
  string id = 1;
}