package main

import (
	"context"
)


// handleUserServiceGetUser handles UserService.GetUser
func (s *MCPServer) handleUserServiceGetUser(ctx context.Context, params map[string]interface{}) (interface{}, error) {
	// TODO: Convert params to actual proto request type and call gRPC service
	// For now, return mock response for testing
	return map[string]interface{}{
		"message": "UserService.GetUser called successfully",
		"params": params,
	}, nil
}

// handleUserServiceListUsers handles UserService.ListUsers
func (s *MCPServer) handleUserServiceListUsers(ctx context.Context, params map[string]interface{}) (interface{}, error) {
	// TODO: Convert params to actual proto request type and call gRPC service
	// For now, return mock response for testing
	return map[string]interface{}{
		"message": "UserService.ListUsers called successfully",
		"params": params,
	}, nil
}

// handleUserServiceCreateUser handles UserService.CreateUser
func (s *MCPServer) handleUserServiceCreateUser(ctx context.Context, params map[string]interface{}) (interface{}, error) {
	// TODO: Convert params to actual proto request type and call gRPC service
	// For now, return mock response for testing
	return map[string]interface{}{
		"message": "UserService.CreateUser called successfully",
		"params": params,
	}, nil
}

// handleUserServiceDeleteUser handles UserService.DeleteUser
func (s *MCPServer) handleUserServiceDeleteUser(ctx context.Context, params map[string]interface{}) (interface{}, error) {
	// TODO: Convert params to actual proto request type and call gRPC service
	// For now, return mock response for testing
	return map[string]interface{}{
		"message": "UserService.DeleteUser called successfully",
		"params": params,
	}, nil
}

